Finalizando a adição e estilização do footer e do novo input

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <header>
     <div class="container">
       <h1 class="page__title">Aluraflix</h1>
-      <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="page__logo" alt="logo imersão dev">
+      <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="page__logo"
+        alt="logo imersão dev">
     </div>
     <div class="logo">
       <a href="https://alura.com.br/" target="_blank">
@@ -27,14 +28,30 @@
     <h2 class="main__title">Adicione seus filmes, jogos, livros, séries, animes e mangás favoritos</h2>
     <div class="container">
       <input type="text" class="adiciona__url" placeholder="Insira o endereço da imagem">
-      <button class="adiciona__filme">
-        Adicionar
+      <input type="text" class="adiciona__link" placeholder="Insira o link do trailer">
+    </div>
+    <div class="botoes">
+      <button class="adiciona__item">
+        Adicionar item
       </button>
+      <!--       <button class = "remove__item">Remover item</button> -->
     </div>
     <div class="mensagem__erro">
     </div>
     <div class="lista__filmes">
     </div>;
+  </main>
+  <footer class="rodape">
+    <a href="https://github.com/MarcusUrani" target="_blank">
+      <img src="https://i.imgur.com/SSvQAZy.png" alt="GitHub">
+    </a>
+    <a href="https://www.linkedin.com/in/marcus-urani-553a4b21b/" target="_blank">
+      <img src="https://i.imgur.com/fgV9mOt.png" alt="LinkedIn">
+    </a>
+    <a href="mailto:marcus.urani20@gmail.com">
+      <img src="https://i.imgur.com/rUO94ml.png" alt="E-mail">
+    </a>
+  </footer>
   </main>
   <script src ="index.js"></script>
 </body>
