Adicionando as novas funcionalidades do projeto

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
   <main>
     <h2 class="main__title">Adicione seus filmes e séries favoritos</h2>
     <section class="main__container">
-      <input type="text" class="main__add__url" placeholder="Insira o endereço da imagem">
+      <input type="text" class="main__add__url" placeholder="Insira o nome do item">
     </section>
     <section class="main__button">
       <button class="main__add__item">
-        Adicionar item
+        Pesquisar
       </button>
     </section>
     <section class="main__options">
