Criando as mensagens de erro

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <input type="text" class="main__add__url" placeholder="Insira o nome do item">
     </section>
     <section class="main__button">
-      <button class="main__add__item">
+      <button class="main__add__item button">
         Pesquisar
       </button>
     </section>
@@ -41,6 +41,9 @@
     </section>
     <section class="main__movie__list">
     </section>
+    <div class="center disabled">
+      <section class="main__error__message">
+    </div>
   </main>
   <footer>
     <a href="https://github.com/MarcusUrani" target="_blank">
