--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         Pesquisar
       </button>
     </section>
-    <section class="main__options">
-      <h2 class="main__options__title">Selecione seu filme</h2>
+    <section class="main__options disabled">
+      <h2 class="main__options__title">Selecione um item</h2>
       <section id="escolha" class="main__options__list">
       </section>
     </section>
