Pequenas modificações para manutenibilidade do código

--- a/index.html
+++ b/index.html
@@ -1,62 +1,61 @@
+<!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel ="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap" rel="stylesheet">
-  <title>Aluraflix</title>
-</head>
-
-<body>
-  <header>
-    <section class="header__container">
-      <h1 class="header__title">Aluraflix</h1>
-      <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="header__logo"
-        alt="logo imersão dev">
-    </section>
-    <figure class="logo">
-      <a href="https://alura.com.br/" target="_blank">
-        <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="Logo alura" class="header__alura__logo">
-      </a>
-    </figure>
-  </header>
-  <main>
-    <h2 class="main__title">Adicione seus filmes e séries favoritos</h2>
-    <section class="main__container">
-      <input type="text" class="main__add__url" placeholder="Insira o nome do item">
-    </section>
-    <section class="main__button">
-      <button class="main__add__item button">
-        Pesquisar
-      </button>
-    </section>
-    <section class="main__options disabled">
-      <h2 class="main__options__title">Selecione um item</h2>
-      <section id="escolha" class="main__options__list">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel ="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap" rel="stylesheet">
+    <title>Aluraflix</title>
+  </head>
+  <body>
+    <header>
+      <section class="header__container">
+        <h1 class="header__title">Aluraflix</h1>
+        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="header__logo"
+          alt="logo imersão dev">
       </section>
-    </section>
-    <section class="main__movie__list">
-    </section>
-    <div class="center disabled">
-      <section class="main__error__message">
-    </div>
-  </main>
-  <footer>
-    <a href="https://github.com/MarcusUrani" target="_blank">
-      <img class="footer__link"src="https://i.imgur.com/SSvQAZy.png" alt="GitHub">
-    </a>
-    <a href="https://www.linkedin.com/in/marcusurani" target="_blank">
-      <img class="footer__link" src="https://i.imgur.com/fgV9mOt.png" alt="LinkedIn">
-    </a>
-    <a href="mailto:marcus.urani20@gmail.com">
-      <img class="footer__link" src="https://i.imgur.com/rUO94ml.png" alt="E-mail">
-    </a>
-  </footer>
-  </main>
-  <script src ="index.js"></script>
-</body>
+      <figure class="logo">
+        <a href="https://alura.com.br/" target="_blank">
+          <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="Logo alura" class="header__alura__logo">
+        </a>
+      </figure>
+    </header>
+    <main>
+      <h2 class="main__title">Adicione seus filmes e séries favoritos</h2>
+      <section class="main__container">
+        <input type="text" class="main__add__url" placeholder="Insira o nome do item">
+      </section>
+      <section class="main__button">
+        <button class="main__search__item button">
+          Pesquisar
+        </button>
+      </section>
+      <section class="main__options disabled">
+        <h2 class="main__options__title">Selecione um item</h2>
+        <section id="escolha" class="main__options__list">
+        </section>
+      </section>
+      <section class="main__movie__list">
+      </section>
+      <div class="center disabled">
+        <section class="main__error__message">
+      </div>
+    </main>
+    <footer>
+      <a href="https://github.com/MarcusUrani" target="_blank">
+        <img class="footer__link"src="https://i.imgur.com/SSvQAZy.png" alt="GitHub">
+      </a>
+      <a href="https://www.linkedin.com/in/marcusurani" target="_blank">
+        <img class="footer__link" src="https://i.imgur.com/fgV9mOt.png" alt="LinkedIn">
+      </a>
+      <a href="mailto:marcus.urani20@gmail.com">
+        <img class="footer__link" src="https://i.imgur.com/rUO94ml.png" alt="E-mail">
+      </a>
+    </footer>
+    </main>
+    <script src ="index.js"></script>
+  </body>
 </html>
