Modificando a descrição de um projeto

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </figure>
     </header>
     <main>
-      <h2 class="main__title">Adicione seus filmes e séries favoritos</h2>
+      <h2 class="main__title">Adicione seus filmes favoritos</h2>
       <section class="main__container">
         <input type="text" class="main__add__url" placeholder="Insira o nome do item">
       </section>
