--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
       <h2 class="main__title">Adicione seus filmes favoritos</h2>
       <section class="main__container">
-        <input type="text" class="main__add__url" placeholder="Insira o nome do item">
+        <input type="text" class="main__add__url" placeholder="Insira o nome do filme">
       </section>
       <section class="main__button">
         <button class="main__search__item button">
@@ -34,7 +34,7 @@
         </button>
       </section>
       <section class="main__options disabled">
-        <h2 class="main__options__title">Selecione um item</h2>
+        <h2 class="main__options__title">Selecione um filme</h2>
         <section id="escolha" class="main__options__list">
         </section>
       </section>
